[package]
name = "solana-examples-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
bs58 = "0.5.1"
eyre = "0.6.12"
serde_json = "1.0.115"
solana-client = "1.18.9"
solana-sdk = "1.18.9"
serde = { version = "1.0.197", features = ["derive"] }
jupiter-swap-api-client = { git = "https://github.com/jup-ag/jupiter-api-rust-example.git" }
raydium-contract-instructions = { git = "http://github.com/raydium-io/raydium-contract-instructions.git", rev = "8710befa6d900a15b03a2fadb8a7caa0a91cfbdb" }
tokio = "1.37.0"
bincode = "1.3.3"
solana-account-decoder = "1.18.9"
spl-token-client = "0.9.2"
tracing = "0.1.40"
spl-associated-token-account = "1.0.3"
spl-token = "4.0.0"
